# QuantumComputingPlus

./: CMakeLists.txt  Qubit.cpp  Qubit.h  QubitManipulators.cpp  QubitManipulators.h  QubitRegister.cpp  QubitRegister.h  main.cpp
include/: QuantumAlgorithms.h  Qubit.h  QubitManipulators.h  QubitRegister.h  util.h
src/: QuantumAlgorithms.cpp  Qubit.cpp  QubitManipulators.cpp  QubitRegister.cpp  main.cpp  util.cpp
